--- a/default.css
+++ b/default.css
@@ -21,6 +21,17 @@ button {
   
 }
 
+button1 {
+  background-color: #FF7F50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 20%;
+  
+}
+
 button:hover {
   opacity: 0.8;
 }
